# primme

./: .clang-format  .gitignore  CMakeLists.txt  COPYING.txt  Link_flags  Make_flags  README.rst  README_for_developers.rst  makefile  package.py  primmestyle.css  readme.html  readme.txt  tags
.github/workflows/: testing.yml
Base/COMMONSRC/: Complex.c  Makefile  common_numerical.c  common_numerical.h  common_numerical_private.h  const.h  errors.c  errors_private.h  primme.h  primme_f77.c  primme_f77.h  primme_f77_private.h  primme_interface.c  primme_interface.h  wtime.c  wtime.h
Base/SRC/: Makefile-sed  README  convergence.base.c  convergence.base.h  convergence_private.base.h  correction.base.c  correction.base.h  correction_private.base.h  factorize.base.c  factorize.base.h  globalsum.base.c  globalsum.base.h  init.base.c  init.base.h  init_private.base.h  inner_solve.base.c  inner_solve.base.h  inner_solve_private.base.h  locking.base.c  locking.base.h  locking_private.base.h  main_iter.base.c  main_iter.base.h  main_iter_private.base.h  numerical.base.c  numerical.base.h  numerical_private.base.h  ortho.base.c  ortho.base.h  primme.base.c  primme_private.base.h  restart.base.c  restart.base.h  restart_private.base.h  solve_H.base.c  solve_H.base.h  solve_H_private.base.h  update_W.base.c  update_W.base.h  update_projection.base.c  (+1 more)
DTEST/: DriveConf  FullConf  LUNDA.mtx  LeanConf  Makefile_f77seq  Makefile_par  Makefile_seq  ddependencies_par  ddependencies_seq  driver_f77seq.f  driver_par.c  driver_par.h  driver_seq.c  driver_seq.h  ilut.f  readuc.c  shared_utils.c  shared_utils.h  ssrcsr.c
DTEST/tests/: sol_001  sol_002  sol_003  sol_004  sol_005  sol_006  test_001  test_002  test_003  test_004  test_005  test_006
MEX/: PRIMME_MEX_Readme.txt  PRIMME_mex.c  getMatvecHandle.m  getPrecondHandle.m  makefile  primme_eigs.m  primme_eigs_example.m  test.mat
Matlab/: Afun.m  PRIMME_mex.c  Pfun.m  RIF.c  RIF.mexmaci64  Violin.m  comp.m  deter4.mat  driver.m  fastFD.m  make.m  makefile  pde2961.mat  plotPrincipalAngles.m  plotProjectionErrors.m  primme_eigs.m  primme_mex.cpp  primme_mex.mexa64  primme_svds.m  readme.txt  reduceRankFast.m  test_Afun_Pfun.m  test_LA.m  test_SA.m  test_primme.m  test_rsvd_expdecay.m  test_rsvd_geno.m  test_rsvd_laplacian.m
Matlab/CSE2017/: svds-1e-10-num1-smallest.eps  svds-1e-10-num1-smallest.fig  svds-1e-10-num10-smallest.eps  svds-1e-10-num10-smallest.fig  svds-1e-10-num100-largest.eps  svds-1e-10-num100-largest.fig  svds-1e-10-num100-smallest.eps  svds-1e-10-num100-smallest.fig  svds-1e-10-num50-smallest.eps  svds-1e-10-num50-smallest.fig  svds-1e-10-num6-largest.eps  svds-1e-10-num6-largest.fig  svds-1e-10-num6-smallest.eps  svds-1e-10-num6-smallest.fig
Matlab/PRIMMESVDS_RSVDS_12162017/: Geno_reserror_svds-1E-1-num10-L.fig  Geno_runtime_svds-1E-1-num10-L.fig  Lap_reserror_svds-1E-1-num100-L.fig  Lap_runtime_svds-1E-1-num100-L.fig  expdecay_reserror_svds-1E-1-num10-L.fig  expdecay_runtime_svds-1E-1-num10-L.fig
PRIMMESRC/: Makefile
PYTHON/: Makefile  Primme.py  eigsh.py  examples.py  numpy.i  primme.i  primme_wrap.cxx  primme_wrap.h  primmew.cxx  primmew.h  readme.txt  setup.py  test1.py  tests.py  wrappers.py
Python/: Comparison.ipynb  MANIFEST.in  Makefile  Primme.py  README.rst  comp.py  comp.rst  compare.py  examples.py  primme.c  primme.i  primme.pyx  primme_wrap.cxx  primme_wrap.h  primmew.cxx  primmew.h  pyproject.toml  readme.txt  setup.py  tests.py  wrappers.py
R/: .Rbuildignore  DESCRIPTION  LICENSE  Makefile  NAMESPACE  README.Rmd  README.md  cleanup  cran-comments.md  f2clapack.sh
R/R/: eigs.R  (+2 more)
SVDSDTEST/: DriveConf  FullConf  LeanConf  Makefile_f77seq  Makefile_par  Makefile_seq  amux.f  atmux.f  atmuxr.f  csr.c  csr.h  driver_f77seq.f  driver_par.h  driver_seq.c  driver_seq.h  mmio.c  mmio.h  readuc.c  shared_utils.c  shared_utils.h
SVDSZTEST/: DD  FullConf  Makefile_f77seq  Makefile_seq  MinConf  driver_seq.c  zamux.f  zilut.f
TEST/: DriveConf  Makefile  MinConf  driver.c  driver_f77seq.f  driver_f77seqz.f  driversvds.c  ex_c.m4  ex_dseq.c  ex_dseqf77.f  ex_f77.m4  ex_petsc.c  ex_petscf77.F  ex_petscf77ptr.F  ex_zseq.c  ex_zseqf77.f  exsvd_c.m4  exsvd_f77.m4  lund_b.mtx  makefile  readme.txt  rect.mtx
ZTEST/: DriveConf  HA.mtx  LeanConf  MM  Makefile_f77seq  Makefile_seq  MinConf  driver_f77seq.f  driver_seq.c  driver_seq.h  matrix.mtx  readuc.c  shared_utils.c  shared_utils.h  zdependencies_seq
cmake/: PrimmeTests.cmake  primme-config.cmake.in
doc/: Makefile  make.bat  objects.inv  primme.bib  readme.html
examples/: CMakeLists.txt  Laplacian1D.mm  Laplacian1D_1000.mm  Makefile  ex_c.m4  ex_eigs_convTest.c  ex_eigs_dcublas.c  ex_eigs_dhipblas.c  ex_eigs_dmagma.c  ex_eigs_dpar.c  ex_eigs_dparTests.c  ex_eigs_dseq  ex_eigs_dseq.c  ex_eigs_dseq_phi.c  ex_eigs_dseqf77.f  ex_eigs_dseqf90.f90  ex_eigs_mpi.c  ex_eigs_petsc.c  ex_eigs_petscf77.F  ex_eigs_petscf77ptr.F  ex_eigs_zcublas.c  ex_eigs_zcublas0.c  ex_eigs_zhipblas.c  ex_eigs_zhipblas0.c  ex_eigs_zpar.c  ex_eigs_zseq  ex_eigs_zseq.c  ex_eigs_zseq_normal.c  ex_eigs_zseqf77.f  ex_eigs_zseqxx.cxx  ex_f77.m4  ex_svds_dmagma.c  ex_svds_dseq  ex_svds_dseq.c  ex_svds_dseqf77.f  ex_svds_dseqf90.f90  ex_svds_petsc.c  ex_svds_petscf77.F  ex_svds_petscf77ptr.F  ex_svds_zseq  (+6 more)
include/: CMakeLists.txt  primme.h  primme_eigs.h  primme_eigs_f77.h  primme_eigs_f90.inc  primme_f77.h  primme_f90.inc  primme_svds.h  primme_svds_f77.h  primme_svds_f90.inc
src/: CMakeLists.txt  Makefile  deps
tests/: Makefile  driver.c  driversvds.c  readme.txt
(+1098 files in other folders)
